SEC 9: 91. Introduction to CQRS pattern